fix navigation links z-index

--- a/main.css
+++ b/main.css
@@ -26,6 +26,7 @@ a {
   bottom: 30px;
   text-align: center;
   width: 100%;
+  z-index: 3;
 }
 
 h2 {
@@ -64,7 +65,7 @@ font-size: calc(20px + (35 - 20) * ((100vw - 320px) / (1000 - 320)));
 
 #section-1::after {
   content: "";
-  height: 92vh;
+  height: 100vh;
   width: 50vw;
   position: absolute;
   top: 0;
